# TimeStampGenerator

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
assets/: settings.json
core/: generator.py  util.py
