[tool.poetry]
name = "timestampgenerator"
version = "0.1.0"
description = ""
authors = ["yrkdaysnf <yaroslav.y2010@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
flet = "^0.22.1"
moviepy = "^1.0.3"
flet-contrib = "^2024.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
pyinstaller = "^6.8.0"
