[tool.poetry]
name = "TimeStampGenerator"
package-mode = false
version = "1.0.0"
description = "GUI App for generating TimeStamp's on video's."
authors = ["yrkdaysnf <yaroslav.y2010@ya.ru>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/yrkdaysnf/TimeStampGenerator"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
flet = "^0.22.1"
moviepy = "^1.0.3"
flet-contrib = "^2024.3.6"
pyinstaller = { version = "^6.8.0", optional = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
pack = ["pyinstaller"]
